[metadata]
name = scons-dtxtools
version = 0.1.0
author = Keith F Prussing
author_email = kprussing74@gmail.com
description = A tool for processing LaTeX ``.ins`` and ``.dtx`` files
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/kprussing/scons-dtxtools
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =
    scons
    build
    development
    latex

[options]
package_dir =
    =sconscontrib
packages = find_namespace:
python_requires = >=3.6, <4
install_requires =
    SCons>=4
zip_safe = False

[options.packages.find]
where = sconscontrib
